# dl

./: CMakeLists.txt  Makefile  README.md  README_NEW.md  my_part.cpp  program
src/: main.cpp
src/engine/: Gate.cpp  Gate.h  Simulator.cpp  Simulator.h  Wire.cpp  Wire.h
src/ui/: Canvas.cpp  Canvas.h  ComponentPalette.cpp  ComponentPalette.h  Configuration.h  Menu.cpp  Menu.h
